<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        app:title="@string/calculator"
        app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/all_clear_bt"
                style="@style/ActionButton"
                android:text="@string/clean_all"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bracket1_bt"
                style="@style/ActionButton"
                android:text="@string/bracket_start" />

            <TextView
                android:id="@+id/bracket2_bt"
                style="@style/ActionButton"
                android:text="@string/bracket_end" />

            <TextView
                android:id="@+id/div_bt"
                style="@style/ActionButton"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt7"
                style="@style/NumberButton"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/bt8"
                style="@style/NumberButton"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/bt9"
                style="@style/NumberButton"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/multiply_bt"
                style="@style/ActionButton"
                android:text="@string/multiple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt4"
                style="@style/NumberButton"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/bt5"
                style="@style/NumberButton"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/bt6"
                style="@style/NumberButton"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/plus_bt"
                style="@style/ActionButton"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt1"
                style="@style/NumberButton"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/bt2"
                style="@style/NumberButton"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/bt3"
                style="@style/NumberButton"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/minus_bt"
                style="@style/ActionButton"
                android:text="@string/minus"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/point_bt"
                style="@style/NumberButton"
                android:text="@string/point"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bt0"
                style="@style/NumberButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/back_bt"
                style="@style/ActionButton"
                android:text="@string/clean_one"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/equal_bt"
                style="@style/ActionButton"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>